[package]
name = "revault_coordinatord"
version = "0.0.1"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"

[dependencies]
revault_net = { path = "../revault_net" }

tokio = { version = "1.0", features = ["io-util",  "macros", "net", "rt-multi-thread"] }

# For the config file
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

# Don't reinvent the wheel
dirs = "3.0.1"
daemonize-simple = "0.1.4"

# Logging stuff
log = "0.4"
fern = "0.5"
chrono = "0.4"
