[package]
name = "revault_coordinatord"
version = "0.0.2"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"

[dependencies]
revault_net = "0.1"

tokio = { version = "1.0", features = ["io-util",  "macros", "net", "rt-multi-thread"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For the config file
toml = "0.5"

# Don't reinvent the wheel
dirs = "3.0.1"
daemonize-simple = "0.1.4"

# Logging stuff
log = "0.4"
fern = "0.5"
chrono = "0.4"

# Used for storing the signatures and spend transactions
tokio-postgres = "0.7"

[dev-dependencies]
revault_tx = { version = "0.3", features = ["use-serde"] }
