[package]
name = "fuzz"
version = "0.0.1"
authors = ["Daniela Brozzoni <danielabrozzoni@protonmail.com>"]
edition = "2018"
description = "Honggfuzz based fuzzing for the Coordinator Server"


[dependencies]
honggfuzz = "0.5"
revault_coordinatord = { path = "..", features = ["fuzztesting"] }
revault_net = { git = "https://github.com/revault/revault_net" }
revault_tx = { version = "0.3", features = ["use-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["io-util",  "macros", "net", "rt-multi-thread"] }

[[bin]]
name = "send_msg"
path = "targets/send_msg.rs"
